--- a/main.ipynb
+++ b/main.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-03T01:37:39.576145Z",
-     "start_time": "2019-06-03T01:37:28.829101Z"
+     "end_time": "2019-06-03T23:57:27.137523Z",
+     "start_time": "2019-06-03T23:57:26.077499Z"
     }
    },
    "outputs": [
@@ -22,7 +22,7 @@
     }
    ],
    "source": [
-    "import sys,os, platform, random, glob\n",
+    "import sys, os, platform, random, glob\n",
     "from tabulate import tabulate\n",
     "\n",
     "path = os.path.abspath('./aux/')\n",
@@ -55,11 +55,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-03T01:37:41.818908Z",
-     "start_time": "2019-06-03T01:37:41.650002Z"
+     "end_time": "2019-06-03T23:57:53.356513Z",
+     "start_time": "2019-06-03T23:57:53.323281Z"
     }
    },
    "outputs": [
@@ -92,11 +92,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-03T01:44:11.399835Z",
-     "start_time": "2019-06-03T01:37:44.842200Z"
+     "end_time": "2019-06-04T00:03:33.630363Z",
+     "start_time": "2019-06-03T23:57:55.213923Z"
     }
    },
    "outputs": [
@@ -162,11 +162,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-03T01:44:11.867751Z",
-     "start_time": "2019-06-03T01:44:11.446652Z"
+     "end_time": "2019-06-04T00:03:34.053736Z",
+     "start_time": "2019-06-04T00:03:33.743281Z"
     }
    },
    "outputs": [
@@ -221,11 +221,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-03T01:46:10.436741Z",
-     "start_time": "2019-06-03T01:44:11.966492Z"
+     "end_time": "2019-06-04T00:05:33.175635Z",
+     "start_time": "2019-06-04T00:03:34.261244Z"
     },
     "scrolled": false
    },
@@ -596,11 +596,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-03T01:46:11.464734Z",
-     "start_time": "2019-06-03T01:46:10.552932Z"
+     "end_time": "2019-06-04T00:05:34.296447Z",
+     "start_time": "2019-06-04T00:05:33.452197Z"
     }
    },
    "outputs": [
@@ -662,8 +662,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-03T01:52:45.859405Z",
-     "start_time": "2019-06-03T01:52:09.962805Z"
+     "end_time": "2019-06-04T00:06:08.937014Z",
+     "start_time": "2019-06-04T00:05:34.550114Z"
     },
     "scrolled": false
    },
@@ -1051,8 +1051,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-03T01:53:06.035077Z",
-     "start_time": "2019-06-03T01:53:05.335374Z"
+     "end_time": "2019-06-04T00:06:09.978056Z",
+     "start_time": "2019-06-04T00:06:09.223082Z"
     },
     "scrolled": false
    },
@@ -1227,11 +1227,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-03T01:55:15.434152Z",
-     "start_time": "2019-06-03T01:55:14.108224Z"
+     "end_time": "2019-06-04T00:06:11.383501Z",
+     "start_time": "2019-06-04T00:06:10.220530Z"
     },
     "scrolled": false
    },
@@ -1290,7 +1290,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "=== Final Report ===\n",
+      "===== Final Report =====\n",
       "+-----------+----------+\n",
       "| Metric    |    Value |\n",
       "+===========+==========+\n",
