Added organization and commentaries

--- a/main.ipynb
+++ b/main.ipynb
@@ -1,6 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# A framework for quality assessment of corpus callosum segmentation in large-scale studies\n",
+    "\n",
+    "The corpus callosum (CC) is the greatest white matter structure and is responsible for the interconnection of both brain hemispheres. Its segmentation is an important step for any posterior analysis such as parcellation, registration, and feature extraction. With the proliferation of automatic and semi-automatic algorithms for CC segmentation in magnetic resonance imaging (MRI), quality control is required, allowing studies on large datasets with no human interaction.\n",
+    "\n",
+    "We proposed a framework for the quality control of CC segmentation based on the shape signature, computed at different resolutions. All of the 49 generated signatures (one for each specific resolution) were used together with one support vector machine (SVM) model for the generation of 49 individual classifiers. A disagreement metric was used for clustering the individual classifiers, and one representative from each cluster was selected to construct the final ensemble.\n",
+    "\n",
+    "<img src=\"./images/Framework_quality.png\">\n",
+    "\n",
+    "## Importing libraries and external functions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -54,6 +69,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Loading data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
@@ -94,7 +116,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Loading data"
+    "## Shape signature extraction and matching"
    ]
   },
   {
@@ -225,6 +247,13 @@
     "print('Valid set: ({})'.format(split_valid),X_valid_norm.shape, Y_valid.shape, np.sum(Y_valid)/len(Y_valid))\n",
     "print('Test set: ({})'.format(1-(split_train+split_valid)), X_test_norm.shape,\n",
     "      Y_test.shape,np.sum(Y_test)/len(Y_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Individual classifiers"
    ]
   },
   {
@@ -611,7 +640,7 @@
     "plt.xlabel('Individual classifiers')\n",
     "plt.legend(loc='best')\n",
     "plt.show()\n",
-    "    \n",
+    "\n",
     "acum_acc = np.logical_not(np.logical_xor(acum_pred.astype('bool'),Y_valid.astype('bool')))\n",
     "\n",
     "mm_conf = np.empty((4,acum_acc.shape[0],acum_acc.shape[0]))\n",
@@ -707,6 +736,13 @@
     "plt.show()\n",
     "\n",
     "hierarchy.set_link_color_palette(None)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ensemble of classifiers"
    ]
   },
   {
@@ -1381,6 +1417,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Final ensemble"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
@@ -1441,6 +1484,15 @@
     "__, opt_th = ax.plot_prc(Y_valid, y_pred_probs)\n",
     "\n",
     "print('Best separation threshold: {}'.format(opt_th))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Results\n",
+    "\n",
+    "Using the optimal ensemble with 12 components (selecting one representative from each cluster), the proposed framework achieved an AUC of $98.25\\%$ on the test dataset, outperforming all individual classifiers on detecting incorrect segmentations."
    ]
   },
   {
@@ -1563,6 +1615,13 @@
     "plt.hist(y_pred_probs,bins=24)\n",
     "plt.title('Predicted probabilities distribution')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Top ten correct classification"
    ]
   },
   {
@@ -1731,6 +1790,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Classification errors (False positives and False negatives)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
@@ -1861,7 +1927,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Analysis"
+    "### Ensemble with the 12 best-quality individual classifiers (Comparison)"
    ]
   },
   {
@@ -2094,6 +2160,14 @@
     "plt.xlabel('Individual classifiers')\n",
     "plt.legend(loc='best')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusions\n",
+    "The shape signature allows a pool of classifiers to be created, where each represents specific features. The low-quality filter and the disagreement measure allows high-quality and heterogeneous clusters to be generated for the selection of the best classifiers for the ensemble, ensuring an optimal trade-off between the ensemble size and high AUC."
    ]
   }
  ],
