--- a/main.ipynb
+++ b/main.ipynb
@@ -2173,7 +2173,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -2187,7 +2187,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.5.4"
   },
   "toc": {
    "base_numbering": 1,
