--- a/main.ipynb
+++ b/main.ipynb
@@ -29,15 +29,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Python version:  3.7.1\n",
-      "Numpy version:  1.15.4\n",
-      "Scipy version:  1.1.0\n",
-      "Matplotlib version:  3.0.2\n"
+      "Python version:  3.5.4\n",
+      "Numpy version:  1.12.1\n",
+      "Scipy version:  0.19.1\n",
+      "Matplotlib version:  2.0.2\n",
+      "Scikit-learn version:  0.19.0\n"
      ]
     }
    ],
    "source": [
-    "import sys, os, platform, random, glob\n",
+    "import sys, os, platform, random, glob, sklearn\n",
     "from tabulate import tabulate\n",
     "\n",
     "path = os.path.abspath('./aux/')\n",
@@ -65,7 +66,8 @@
     "print('Python version: ', platform.python_version())\n",
     "print('Numpy version: ', np.version.version)\n",
     "print('Scipy version: ', scipy.__version__)\n",
-    "print('Matplotlib version: ', mpl.__version__)"
+    "print('Matplotlib version: ', mpl.__version__)\n",
+    "print('Scikit-learn version: ',sklearn.__version__)"
    ]
   },
   {
